--- a/todolist/src/_variables.scss
+++ b/todolist/src/_variables.scss
@@ -5,3 +5,4 @@ $li_color:rgb(243, 243, 243);
 $delete_color:rgb(237, 80, 80);
 $delete_color_onhover:gray;
 $error_color:red;
+$box-shadow:rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
