--- a/todolist/src/components/List/List.scss
+++ b/todolist/src/components/List/List.scss
@@ -4,10 +4,13 @@ ul{
     list-style: none;
     margin-top: 60px;
     padding: 0;
+    gap: 10px;
+
     li{
         display: flex;
         justify-content: center;
         background-color: $li_color;
+        box-shadow: $box-shadow;
       span{
         border: 1px solid;
         border-right: none;
