--- a/todolist/src/components/List/List.scss
+++ b/todolist/src/components/List/List.scss
@@ -4,23 +4,27 @@ ul{
     list-style: none;
     margin-top: 60px;
     padding: 0;
+    display: flex;
+    flex-direction: column;
     gap: 10px;
-
     li{
         display: flex;
         justify-content: center;
         background-color: $li_color;
         box-shadow: $box-shadow;
+        border-radius: 25px;
       span{
-        border: 1px solid;
-        border-right: none;
+        border-right:  1px solid;
         width: 100%;
         padding: 10px 15px;
+      }
+      .remove,.deadline{
+        border: 0;
       }
       button{
         background-color: $delete_color;
         font-weight: 600;
-        padding: 10px 10px;
+        padding: 7px 10px;
         border: 0;
         border-bottom: 1px solid;
         box-shadow: 1px 1px 1px rgb(85, 84, 84);
