--- a/todolist/src/components/TodoList/TodoList.scss
+++ b/todolist/src/components/TodoList/TodoList.scss
@@ -1,62 +1,74 @@
 @import '../../variables';
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.todolist{
-    height: 650px ;
-    overflow-y: scroll;
+.todolist {
+    height: 670px;
+    overflow-y: auto;
     width: 500px;
     background-color: $main_color;
     margin: 0 auto;
-    border-radius: 20px;
+    border-radius: 28px;
     margin-top: 30px;
     box-shadow: $box-shadow;
 
-    h1{
+    h1 {
         font-size: 40px;
         color: $text_color;
     }
-    .container{
-        padding: 0px 5%;
-       margin-top: 20px;
-        form{
+
+    .container {
+        padding: 20px 5%;
+        form {
             display: flex;
             align-items: center;
-            input{
+            flex-wrap: wrap;
+            input {
                 display: block;
                 height: 25px;
                 padding: 12px 5px;
                 border-radius: 4px;
                 border: 0;
             }
-            .deadline{
-              border-top: 1px solid;
+
+            .deadline {
+                border-top: 1px solid;
             }
-            button{
-                padding: 22px 25px;
-                color:$text_color ;
+
+            button {
+                padding: 20px 25px;
+                color: $text_color ;
                 background: $btn_color;
                 border: 0;
                 cursor: pointer;
                 border-radius: 5px;
 
-                &:hover{
+                &:hover {
                     opacity: 0.7;
                 }
             }
-            .errors{
+           .remove_all{
+            background-color: $delete_color_onhover;
+            margin-left: 25px;
+            width: 110px;
+            height: 56px;
+            padding: 20px;
+
+           }
+            .errors {
                 display: flex;
                 flex-direction: column;
                 justify-content: space-around;
                 font-size: 14px;
-                color:$error_color;
+                color: $error_color;
                 margin-left: 15px;
             }
         }
     }
-   
-  
+
+
 }
